<resources>
    <string name="app_name">SportSpot</string>
    <string name="label_email">email</string>
    <string name="label_password">password</string>
    <string name="login_btn_text">login</string>
    <string name="register_here">Register here!</string>
    <string name="sign_up">sign up</string>
    <string name="login_here">Login here!</string>

    <!--Authentication strings-->
    <string name="signup_error">Signup error. Please try again!</string>
    <string name="login_error">Login error. Please try again!</string>

    <string name="no_interner_error_message">Failed to connect to internet. Please check your network connection</string>
    <string name="no_interner_error_title">Network connection error</string>

    <string name="password_weak_msg">Password is too weak. It should be 6 characters at least.</string>
    <string name="invalid_email_format_msg">Invalid email address format.</string>
    <string name="email_collision_msg">User already exists with this email address.</string>

    <string name="login_invalid_credentials_msg">Incorrect email address or password.</string>
    <string name="no_email_registered_msg">There is no user registered with this email.</string>

    <string name="google_signin_error">Google sign in error</string>

    <string name="auth_error_title">Authentication error</string>

    <string name="no_authorized_user_message">No current user logged in</string>

    <!-- Main menu items strings -->
    <string name="menu_profile">My profile</string>
    <string name="menu_activities_map">Map of activities</string>
    <string name="menu_new_activity">Add new activity</string>
    <string name="menu_grounds">Map of grounds</string>
    <string name="menu_new_ground">Add new ground</string>
    <string name="menu_logout">Logout</string>

    <!--New activity - Details page -->
    <string name="new_activity_detail_header"> Add the details of your activity </string>
    <string name="new_activity_detail_description"> Description </string>
    <string name="new_activity_next_btn"> Next </string>
    <string name="new_activity_desc_required"> Activity description is required</string>
    <string name="new_activity_sport_required"> Sport type is required</string>
    <string name="new_activity_start_date_hint">Select a date</string>
    <string name="new_activity_start_date_required">Start date is required</string>

    <string name="new_activity_start_time_hint">Select start time</string>
    <string name="new_activity_start_time_required">Start time is required</string>

    <string name="new_activity_num_of_persons_hint">Num of persons</string>
    <string name="new_activity_num_of_persons_required">Num of persons</string>

    <!--New ground - Details page -->
    <string name="new_ground_detail_header"> Add the details of the ground </string>
    <string name="new_ground_detail_description"> Description </string>
    <string name="new_ground_next_btn"> Next </string>

    <string name="new_ground_sport_types_desc">Select sport types</string>
    <string name="new_ground_sport_required"> Sport type is required</string>
    <string name="cost_free_checkbox"> Cost-free </string>
    <string name="cost_per_hour_hint"> Cost per hour (HUF) </string>


    <!--Sport type array-->
    <string name="sport_select_hint">Select a sport</string>
    <string-array name="sport_type_items_array">
        <item>Basketball</item>
        <item>Football</item>
        <item>Table tennis</item>
        <item>Tennis</item>
        <item>Teqball</item>
    </string-array>

    <!--Sport type strings-->
    <string name="sportType_basketball">Basketball</string>
    <string name="sportType_football">Football</string>
    <string name="sportType_tableTennis">Table tennis</string>
    <string name="sportType_tennis" >Tennis</string>
    <string name="sportType_teqball" >Teqball</string>

    <!--Coverage type select-->
    <string name="coverage_select_hint">Select a coverage type</string>
    <string-array name="coverage_types_array">
        <item>Grass</item>
        <item>Concrete</item>
        <item>Artificial grass</item>
        <item>Clay court</item>
        <item>Hard court</item>

    </string-array>

    <!-- Map of Activities page -->
    <string name="activity_info_owner_label">Owner :</string>
    <string name="info_window_owner_me">Me</string>
    <string name="activity_info_sport_type_label">Sport type :</string>
    <string name="activity_info_places_label">Free places :</string>
    <string name="activity_info_start_date_label">Starts at :</string>
    <string name="activity_info_desc_label">Description :</string>
    <string name="activity_info_signup_btn_text">Sign up</string>
    <string name="activity_info_remove_signup_btn_text">Remove signup</string>
    <string name="activity_info_details_btn_text">Details</string>
    <string name="activity_info_close_desc">Close info window</string>

    <string name="filter_activities_menu">Filter activities</string>
    <string name="filter_all_activities">All activities</string>
    <string name="filter_my_activities">My activities</string>
    <string name="filter_signed_up_activities">Signed up activities</string>
    <string name="filter_open_activities">Open activities</string>
    <string name="activities_map_legend">Legend</string>

    <!-- Activity details page -->
    <string name="activity_details_owner">Owner</string>
    <string name="activity_details_participants">Participants</string>
    <string name="activity_details_sport_type">Sport type</string>
    <string name="activity_details_free_places">Free places</string>
    <string name="activity_details_start_date">Start date and time</string>
    <string name="activity_details_desc">Description</string>

    <!--New activity - Location page -->
    <string name="new_activity_loaction_back_btn"> Back </string>
    <string name="new_activity_loaction_submit_btn"> Submit </string>

    <!-- Navigation drawer open - close Description -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="email_card_title">Email</string>
    <string name="name_card_title">Name</string>
    <string name="welcome_message"> Hello, "%1$s" !</string>

    <!--Dialog messages-->
    <string name="location_denied_aware_title">Location permission is not allowed for this application.</string>
    <string name="location_denied_aware_message">If you would like to access this feature, please enable Location permission in Settings.</string>
    <string name="location_disallowed_warning_message">If you would like to use fully this feature, please enable Location permission in Settings. </string>

    <string name="location_unavailable_title">Location not found</string>
    <string name="location_unavailable_message">Please check that location is enabled"</string>

    <string name="user_data_sync_error_title">Error at sync user data</string>
    <string name="activities_load_error">Failed to load activities</string>

    <!--Showcase view messages -->
    <string name="activity_location_showcase_title">Select loaction to your activity</string>
    <string name="activity_location_showcase_text">Press and hold to select location.</string>
    <string name="activity_location_drag_showcase_title">Change location of your activity</string>
    <string name="activity_location_drag_showcase_text">You can drag and drop the location marker to change location.</string>
    <string name="my_location_showcase_text">Tap My Location button, to center map to your current location.</string>


</resources>