<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_menu"
        android:title="@string/menu_profile" />

    <item
        android:id="@+id/activities_map"
        android:icon="@drawable/ic_menu_avtivities"
        android:title= "@string/menu_activities_map" />

    <item
        android:id="@+id/new_activity"
        android:icon="@drawable/ic_menu"
        android:title="@string/menu_new_activity" />

    <item
        android:id="@+id/map_of_grounds"
        android:icon="@drawable/ic_map_of_grounds"
        android:title="@string/menu_grounds" />

    <item
        android:id="@+id/new_ground"
        android:icon="@drawable/ic_add_new_ground"
        android:title="@string/menu_new_ground" />

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_menu_logout"
        android:title="@string/menu_logout" />

</menu>