<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".menus.new_ground.new_ground_fragments.NewGroundDetailsFragment"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true">

    <TextView
        android:id="@+id/new_ground_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="28dp"
        android:text="@string/new_ground_detail_header"
        android:fontFamily="sans-serif-condensed"
        android:textSize="20sp">

    </TextView>

    <ScrollView
        android:id="@+id/ground_details_scroll_view"
        android:layout_below="@id/new_ground_header"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/sport_type_checkBox_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="28dp"
                android:text="@string/new_ground_sport_types_desc"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20sp">

            </TextView>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/basketball_checkBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:buttonTint="@color/colorPrimary"
                app:useMaterialThemeColors="true"
                android:textSize="20sp"
                android:text="@string/sportType_basketball"
                android:paddingStart="15sp"
                tools:ignore="RtlSymmetry"

                />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/football_checkBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:buttonTint="@color/colorPrimary"
                android:textSize="20sp"
                android:text="@string/sportType_football"
                android:paddingStart="15sp"
                tools:ignore="RtlSymmetry"

                />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/table_tennis_checkBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:buttonTint="@color/colorPrimary"
                android:textSize="20sp"
                android:text="@string/sportType_tableTennis"
                android:paddingStart="15sp"
                tools:ignore="RtlSymmetry"
                />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/tennis_checkBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:buttonTint="@color/colorPrimary"
                android:textSize="20sp"
                android:text="@string/sportType_tennis"
                android:paddingStart="15sp"
                tools:ignore="RtlSymmetry"
                />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/teqball_checkBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:buttonTint="@color/colorPrimary"
                android:textSize="20sp"
                android:text="@string/sportType_teqball"
                android:paddingStart="15sp"
                tools:ignore="RtlSymmetry"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/coverage_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_ground_coverage"
                android:layout_margin="30dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/coverage_type_dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:hint="@string/coverage_select_hint"
                    android:inputType="none"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cost_free_checkBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:buttonTint="@color/colorPrimary"
                android:textSize="20sp"
                android:text="@string/cost_free_checkbox"
                android:checked="true"
                android:paddingStart="15sp"
                tools:ignore="RtlSymmetry"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cost_per_hour_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:hint="@string/cost_per_hour_hint"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/cost_per_hour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:gravity="start|top"
                    android:ems="10"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ground_desc_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_activity_desc_24"
                android:layout_margin="30dp"
                android:hint="@string/new_activity_detail_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ground_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:gravity="start|top"
                    android:ems="10"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/next_to_ground_location_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_activity_next_btn"
                android:layout_margin="30dp"

                />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>